--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,7 @@ body { background-color: #0a36c5; }
 @media (min-width: 991px) { header { width: 100%; background-color: #00000C; }
   header img { left: 1%; width: 10%; padding: 0.5%; }
   header a { font-size: 1.5vw; color: white; }
-  header .Accueil { font-family: 'Oswald', sans-serif; width: 10%; background-color: white; border: 1px solid #00000C; padding-left: 1%; padding-right: 1%; color: #0a36c5; font-size: 2vw; text-decoration: none; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: all 0.2s; transition: all 0.2s; }
+  header .Accueil { text-align: center; font-family: 'Oswald', sans-serif; width: 10%; background-color: white; border: 1px solid #00000C; padding-left: 1%; padding-right: 1%; color: #0a36c5; font-size: 2vw; text-decoration: none; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: all 0.2s; transition: all 0.2s; }
   header .Accueil:hover { color: #00000C; border: 1px solid #0a36c5; -webkit-box-shadow: inset 0 0 5px #0a36c5; box-shadow: inset 0 0 5px #0a36c5; }
   header .Accueil:active { -webkit-transform: scale(0.9); transform: scale(0.9); }
   header .dropdown { opacity: 0.5; }
