--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -20,6 +20,7 @@ body {
             color: $C1;
         }
         .Accueil {
+            text-align: center;
             font-family: 'Oswald', sans-serif;
             width: 10%;
             background-color: $C1;
