--- a/assets/sass/cv.scss
+++ b/assets/sass/cv.scss
@@ -1,5 +1,5 @@
 $C1: white;
-$C2: #0a36c5;
+$C2: #4c85bd;
 $C3: #00000C;
 .menu {
     position: fixed;
@@ -28,48 +28,49 @@ $C3: #00000C;
     }
 }
 
-@media (min-width: 768px) {
+header {
+    background-color: $C2;
+    height: 120px;
+    width: 98.92vw;
+    margin-right: 0;
+    margin-left: 0;
+    max-width: none;
+    grid-column: 3;
+    #profil {
+        box-shadow: 0px 0px 10px 0px $C1 inset;
+        z-index: 2;
+        position: absolute;
+        left: 42.5vw;
+        height: 120px;
+        transition: all 0.5s;
+    }
+    #dzem {
+        text-align: left;
+        color: $C1;
+        position: absolute;
+        left: 0;
+    }
+    #civique {
+        text-align: right;
+        color: $C1;
+        position: absolute;
+        right: 0;
+        font-size: 1.5vw;
+    }
+}
+
+@media (min-width: 1121px) {
     body {
         margin: 0;
         padding: 0;
         width: 100%;
         text-shadow: $C3 0.1px 0.1px $C1 0.1px 0.1px;
-        .container {
-            background-color: $C3;
-            height: 120px;
-            width: 100%;
-            margin-right: 0;
-            margin-left: 0;
-            max-width: none;
-        }
         h2 {
             font-size: 2.5vw;
         }
         h3 {
             border-bottom: 3px solid $C2;
             font-size: 2vw;
-        }
-        #profil {
-            box-shadow: 0px 0px 10px 0px $C1 inset;
-            z-index: 2;
-            position: absolute;
-            left: 1%;
-            height: 100%;
-            transition: all 0.5s;
-            &:hover {
-                box-shadow: 0px 0px 0px 0px $C1 inset;
-            }
-        }
-        #dzem {
-            text-align: left;
-            color: $C1;
-            margin-left: 5%;
-        }
-        #civique {
-            text-align: right;
-            color: $C1;
-            position: absolute;
-            right: 0;
         }
         #grid {
             display: grid;
@@ -88,8 +89,73 @@ $C3: #00000C;
             color: $C3;
         }
         li {
+            border-bottom: solid 1px rgb(224, 224, 224);
             &:before {
-                content: "►";
+                content: " ";
+                margin-left: 10px;
+            }
+        }
+        .un_quatre {
+            list-style-image: url("../image/un_quatre.png");
+            padding-left: 1%;
+            list-style-position: inside;
+        }
+        .deux_quatre {
+            list-style-image: url("../image/deux_quatre.png");
+            list-style-position: inside;
+            margin-left: 1%;
+        }
+        .trois_quatre {
+            list-style-image: url("../image/trois_quatre.png");
+            padding-left: 1%;
+            list-style-position: inside;
+        }
+        .quatre_quatre {
+            list-style-image: url("../image/quatre_quatre.png");
+            margin-left: 1%;
+            list-style-position: inside;
+        }
+        .tiny_linky {
+            font-size: 1vw;
+            color: $C2;
+        }
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1120px) {
+    body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        text-shadow: $C3 0.1px 0.1px $C1 0.1px 0.1px;
+        h2 {
+            font-size: 2.5vw;
+        }
+        h3 {
+            border-bottom: 3px solid $C2;
+            font-size: 2vw;
+        }
+        #grid {
+            display: grid;
+            grid-template-columns: 50% 50%;
+        }
+        article {
+            color: $C2;
+            font-size: 1.5vw;
+            padding-left: 5%;
+            width: 95%;
+        }
+        ul {
+            list-style: none;
+            margin-left: 0;
+            padding-left: 0;
+            color: $C3;
+        }
+        li {
+            border-bottom: solid 1px rgb(224, 224, 224);
+            &:before {
+                content: " ";
+                margin-left: 10px;
             }
         }
         .un_quatre {
@@ -128,42 +194,12 @@ $C3: #00000C;
         padding: 0;
         width: 100%;
         text-shadow: $C3 0.1px 0.1px $C1 0.1px 0.1px;
-        .container {
-            background-color: $C3;
-            height: 120px;
-            width: 100%;
-            margin-right: 0;
-            margin-left: 0;
-            max-width: none;
-        }
         h2 {
             font-size: 3.5vw;
         }
         h3 {
             border-bottom: 3px solid $C2;
             font-size: 3vw;
-        }
-        #profil {
-            box-shadow: 0px 0px 10px 0px $C1 inset;
-            z-index: 2;
-            position: absolute;
-            left: 350%;
-            height: 45%;
-            transition: all 0.5s;
-            &:hover {
-                box-shadow: 0px 0px 0px 0px $C1 inset;
-            }
-        }
-        #dzem {
-            text-align: left;
-            color: $C1;
-            margin-left: 5%;
-        }
-        #civique {
-            text-align: right;
-            color: $C1;
-            position: absolute;
-            right: 0;
         }
         #grid {
             display: grid;
@@ -182,8 +218,10 @@ $C3: #00000C;
             color: $C3;
         }
         li {
+            border-bottom: solid 1px rgb(224, 224, 224);
             &:before {
-                content: "►";
+                content: " ";
+                margin-left: 10px;
             }
         }
         .un_quatre {
@@ -220,14 +258,6 @@ $C3: #00000C;
         padding: 0;
         width: 100%;
         text-shadow: $C3 0.1px 0.1px $C1 0.1px 0.1px;
-        .container {
-            background-color: $C3;
-            height: 120px;
-            width: 100%;
-            margin-right: 0;
-            margin-left: 0;
-            max-width: none;
-        }
         h2 {
             font-size: 3vw;
         }
@@ -235,35 +265,6 @@ $C3: #00000C;
             border-bottom: 3px solid $C2;
             color: #0a36c5;
             font-size: 1.5vw;
-        }
-        #profil {
-            box-shadow: 0px 0px 10px 0px $C1 inset;
-            z-index: 2;
-            position: absolute;
-            left: 0.5%;
-            height: 100%;
-            transition: all 0.5s;
-            &:hover {
-                box-shadow: 0px 0px 0px 0px $C1 inset;
-            }
-        }
-        #dzem {
-            text-align: left;
-            color: $C1;
-            margin-left: -2%;
-            .prenom {
-                margin-right: 5%;
-            }
-            .nom {
-                margin-right: 5%;
-            }
-        }
-        #civique {
-            text-align: right;
-            color: $C1;
-            position: absolute;
-            right: 0;
-            font-size: 2vw;
         }
         #grid {
             display: grid;
@@ -282,8 +283,10 @@ $C3: #00000C;
             color: $C3;
         }
         li {
+            border-bottom: solid 1px rgb(224, 224, 224);
             &:before {
-                content: "►";
+                content: " ";
+                margin: 5px;
             }
         }
         .un_quatre {
