--- a/assets/css/cv.css
+++ b/assets/css/cv.css
@@ -1,4 +1,4 @@
-.menu { position: fixed; font-size: 10px; background-color: #4c85bd; -webkit-writing-mode: vertical-rl; -ms-writing-mode: tb-rl; writing-mode: vertical-rl; text-orientation: mixed; left: 0; top: 20%; opacity: 0.6; width: 17.5px; -webkit-transition: all 0.5s; transition: all 0.5s; text-decoration: none; border: 0.5px solid #00000C; }
+.menu { z-index: 1; position: fixed; font-size: 10px; background-color: #4c85bd; -webkit-writing-mode: vertical-rl; -ms-writing-mode: tb-rl; writing-mode: vertical-rl; text-orientation: mixed; left: 0; top: 20%; opacity: 0.6; width: 17.5px; -webkit-transition: all 0.5s; transition: all 0.5s; text-decoration: none; border: 0.5px solid #00000C; }
 
 .menu div { padding: 2px; color: white; }
 
@@ -6,18 +6,16 @@
 
 .menu:hover div { color: white; }
 
-header { background-color: #4c85bd; height: 120px; width: 98.92vw; margin-right: 0; margin-left: 0; max-width: none; -ms-grid-column: 3; grid-column: 3; }
+header { background-color: #4c85bd; height: 200px; width: 98.92vw; margin-right: 0; margin-left: 0; max-width: none; -ms-grid-column: 3; grid-column: 3; }
 
-header #profil { -webkit-box-shadow: 0px 0px 10px 0px white inset; box-shadow: 0px 0px 10px 0px white inset; z-index: 2; position: absolute; left: 42.5vw; height: 120px; -webkit-transition: all 0.5s; transition: all 0.5s; }
+header .profil { -webkit-box-shadow: 0px 0px 10px 0px white inset; box-shadow: 0px 0px 10px 0px white inset; z-index: 1; position: absolute; left: 0; height: 200px; -webkit-transition: all 0.5s; transition: all 0.5s; }
 
-header #dzem { text-align: left; color: white; position: absolute; left: 0; }
-
-header #civique { text-align: right; color: white; position: absolute; right: 0; font-size: 1.5vw; }
+header .civique { font-size: 2vw; height: 200px; width: 50%; text-align: right; color: white; position: absolute; right: 0; }
 
 @media (min-width: 1121px) { body { margin: 0; padding: 0; width: 100%; text-shadow: #00000C 0.1px 0.1px white 0.1px 0.1px; }
   body h2 { font-size: 2.5vw; }
   body h3 { border-bottom: 3px solid #4c85bd; font-size: 2vw; }
-  body #grid { display: -ms-grid; display: grid; -ms-grid-columns: 50% 50%; grid-template-columns: 50% 50%; }
+  body .grid { display: -ms-grid; display: grid; -ms-grid-columns: 50% 50%; grid-template-columns: 50% 50%; }
   body article { color: #4c85bd; font-size: 1.5vw; padding-left: 5%; width: 95%; }
   body ul { list-style: none; margin-left: 0; padding-left: 0; color: #00000C; }
   body li { border-bottom: solid 1px #e0e0e0; }
