--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,9 +7,8 @@ body { background-color: #4c85bd; }
   header .Accueil { text-align: center; font-family: 'Oswald', sans-serif; width: 10%; background-color: white; border: 1px solid #00000C; padding-left: 1%; padding-right: 1%; color: #4c85bd; font-size: 2vw; text-decoration: none; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: all 0.2s; transition: all 0.2s; }
   header .Accueil:hover { color: #00000C; border: 1px solid #4c85bd; -webkit-box-shadow: inset 0 0 5px #4c85bd; box-shadow: inset 0 0 5px #4c85bd; }
   header .Accueil:active { -webkit-transform: scale(0.9); transform: scale(0.9); }
-  header .dropdown { opacity: 0.5; }
   header .dropdown:hover { opacity: 0.9; }
-  header .navbar-toggler { background-color: white; border-bottom: 1px #4c85bd solid; }
+  header .navbar-toggler { background-color: #00000C; border-bottom: 1px #4c85bd solid; }
   header .navbar-toggler:active { border-bottom: 5px #4c85bd solid; }
   header .navbarDropdownMenuLink { opacity: 0.5; }
   header .navbarDropdownMenuLink:hover { opacity: 0.9; }
@@ -17,9 +16,10 @@ body { background-color: #4c85bd; }
   header .dropdown-item:hover { opacity: 0.9; }
   section { background-color: #4c85bd; width: 100%; color: white; }
   section h1 { font-family: 'Oswald', sans-serif; text-align: center; font-size: 3vw; text-shadow: #00000C 0 1px 0; }
+  section .intro { font-size: 1.5vw; text-align: center; }
   section .description { text-align: center; border: 1.5px white dotted; -webkit-box-shadow: #00000C 0 1px 5px; box-shadow: #00000C 0 1px 5px; font-size: 1.5vw; }
   section .card { height: 350px; width: 200px; display: inline-block; margin: 10px; -webkit-box-shadow: 0px 2px 0px #00000C; box-shadow: 0px 2px 0px #00000C; -webkit-transition: 0.4s; transition: 0.4s; background-color: white; }
-  section .card .card-title { text-align: center; font-size: 14px; font-weight: bold; color: #4c85bd; text-shadow: 0px 1px 0px #00000C; -webkit-transition: 0.2s; transition: 0.2s; }
+  section .card .card-title { text-align: center; font-size: 14px; font-weight: bold; color: #4c85bd; text-shadow: 0px 1px 0px #00000C, 0px -1px 0px white; -webkit-transition: 0.2s; transition: 0.2s; }
   section .card .badge { width: 100%; }
   section .card .card-text { color: #4c85bd; height: 200px; font-size: 12px; -webkit-transition: 0.2s; transition: 0.2s; }
   section .card .card-text::first-letter { border-left: dotted 2px #4c85bd; font-size: 15px; border-radius: 15px; background-image: -webkit-gradient(linear, left top, right top, from(#00000C), color-stop(55%, white)); background-image: linear-gradient(90deg, #00000C 0%, white 55%); }
@@ -32,7 +32,6 @@ body { background-color: #4c85bd; }
   header .Accueil { font-family: 'Oswald', sans-serif; text-align: center; width: 25%; background-color: white; border: 1px solid #00000C; color: #4c85bd; font-size: 3vw; text-decoration: none; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: all 0.2s; transition: all 0.2s; }
   header .Accueil:hover { color: #00000C; border: 1px solid #4c85bd; -webkit-box-shadow: inset 0 0 5px #4c85bd; box-shadow: inset 0 0 5px #4c85bd; }
   header .Accueil:active { -webkit-transform: scale(0.9); transform: scale(0.9); }
-  header .dropdown { opacity: 0.5; }
   header .dropdown:hover { opacity: 0.9; }
   header .navbar-toggler { background-color: white; border-bottom: 1px #4c85bd solid; }
   header .navbar-toggler:active { border-bottom: 5px #4c85bd solid; }
@@ -42,23 +41,23 @@ body { background-color: #4c85bd; }
   header .dropdown-item:hover { opacity: 0.9; }
   section { background-color: #4c85bd; width: 100%; color: white; position: absolute; top: 7.5%; }
   section h1 { font-family: 'Oswald', sans-serif; text-align: center; font-size: 5vw; text-shadow: #00000C 0 1px 0; padding-top: 5%; }
-  section .intro { font-size: 2vw; }
+  section .intro { font-size: 2vw; text-align: center; }
   section .description { text-align: center; border: 1.5px white dotted; -webkit-box-shadow: #00000C 0 1px 5px; box-shadow: #00000C 0 1px 5px; font-size: 3vw; }
   section .card { margin-top: 1%; margin-bottom: 1%; height: 100%; margin-left: auto; margin-right: auto; width: 80%; display: block; padding: 1px; -webkit-box-shadow: 0px 2px 0px #00000C; box-shadow: 0px 2px 0px #00000C; -webkit-transition: 0.2s; transition: 0.2s; background-color: white; }
-  section .card .card-title { text-align: center; font-size: 5vw; font-weight: bold; color: #4c85bd; text-shadow: 0px 1px 0px #00000C; -webkit-transition: 0.2s; transition: 0.2s; }
+  section .card .card-title { text-align: center; font-size: 5vw; font-weight: bold; color: #4c85bd; text-shadow: 0px 1px 0px #00000C, 0px -1px 0px white; -webkit-transition: 0.2s; transition: 0.2s; }
   section .card .badge { width: 100%; }
   section .card .card-text { color: #4c85bd; height: 25%; font-size: 2.5vw; -webkit-transition: 0.2s; transition: 0.2s; }
   section .card .card-text::first-letter { border-left: dotted 2px #4c85bd; font-size: 2vw; border-radius: 15px; background-image: -webkit-gradient(linear, left top, right top, from(#00000C), color-stop(55%, white)); background-image: linear-gradient(90deg, #00000C 0%, white 55%); }
   section .card:hover { background-color: white; -webkit-transform: scale(0.95); transform: scale(0.95); -webkit-box-shadow: 0px 0px 5px #00000C; box-shadow: 0px 0px 5px #00000C; }
   section .card:hover .card-title { text-align: center; font-size: 4vw; font-weight: bold; color: #4c85bd; text-shadow: 0px -1px 0px #00000C; } }
 
-.logiciels { text-align: center; border: white 1px solid; list-style: none; padding: 1%; -webkit-box-shadow: inset white 0 0 5px; box-shadow: inset white 0 0 5px; background-color: #00000C; width: 50%; }
+.logiciels { margin: auto auto; text-align: center; border: white 1px solid; list-style: none; padding: 1%; -webkit-box-shadow: inset white 0 0 5px; box-shadow: inset white 0 0 5px; background-color: #00000C; width: 75%; }
 
-.logiciels span { color: white; font-family: 'Oswald', sans-serif; border-bottom: white dotted 2px; font-size: 2vw; text-shadow: #00000C 0 1px 1px; background-color: #4c85bd; -webkit-box-shadow: #00000C inset 0 0 10px; box-shadow: #00000C inset 0 0 10px; width: 100%; padding: 1%; }
+.logiciels span { color: white; font-family: 'Oswald', sans-serif; border-bottom: white dotted 2px; font-size: 3vw; text-shadow: #00000C 0 1px 1px; background-color: #4c85bd; -webkit-box-shadow: #00000C inset 0 0 10px; box-shadow: #00000C inset 0 0 10px; width: 100%; padding: 1%; }
 
 .logiciels li { margin-top: 2%; margin-left: 0; padding-left: 0; }
 
-.logiciels li a { border: white 0.1px solid; color: #4c85bd; font-size: 1.8vw; padding: 1%; height: 25%; width: 100%; display: inline-block; -webkit-box-shadow: inset white 0 0 5px; box-shadow: inset white 0 0 5px; text-decoration: none; background-color: #00000C; -webkit-transition: all 0.5s; transition: all 0.5s; }
+.logiciels li a { border: white 0.1px solid; color: #4c85bd; font-size: 15px; padding: 1%; height: 25%; width: 100%; display: inline-block; -webkit-box-shadow: inset white 0 0 5px; box-shadow: inset white 0 0 5px; text-decoration: none; background-color: #00000C; -webkit-transition: all 0.5s; transition: all 0.5s; }
 
 .logiciels li a:hover { border: white 0.1px solid; color: #4c85bd; font-size: 1.8vw; padding: 1%; padding-left: 60%; height: 25%; width: 100%; display: inline-block; -webkit-box-shadow: inset white 0 0 10px; box-shadow: inset white 0 0 10px; text-decoration: none; background-color: white; }
 /*# sourceMappingURL=main.css.map */
