--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -269,19 +269,18 @@ body {
 }
 
 .logiciels {
-    margin: auto auto;
     text-align: center;
     border: $C1 1px solid;
     list-style: none;
     padding: 1%;
     box-shadow: inset $C1 0 0 5px;
     background-color: $C3;
-    width: 75%;
+    width: 48%;
     span {
         color: $C1;
         font-family: 'Oswald', sans-serif;
         border-bottom: $C1 dotted 2px;
-        font-size: 3vw;
+        font-size: 2.1vw;
         text-shadow: $C3 0 1px 1px;
         background-color: $C2;
         box-shadow: $C3 inset 0 0 10px;
@@ -295,7 +294,7 @@ body {
         a {
             border: $C1 0.1px solid;
             color: $C2;
-            font-size: 15px;
+            font-size: 1.8vw;
             padding: 1%;
             height: 25%;
             width: 100%;
@@ -303,20 +302,77 @@ body {
             box-shadow: inset $C1 0 0 5px;
             text-decoration: none;
             background-color: $C3;
-            transition: all 0.5s;
+            padding-left: 1%;
+            transition: padding-left 1s;
             &:hover {
                 border: $C1 0.1px solid;
                 color: $C2;
                 font-size: 1.8vw;
                 padding: 1%;
-                padding-left: 60%;
+                padding-left: 10%;
                 height: 25%;
                 width: 100%;
                 display: inline-block;
-                box-shadow: inset $C1 0 0 10px;
+                box-shadow: inset $C2 0 0 5px;
                 text-decoration: none;
                 background-color: $C1;
             }
         }
     }
+}
+
+.technologies {
+    text-align: center;
+    border: $C1 1px solid;
+    list-style: none;
+    padding: 1%;
+    box-shadow: inset $C1 0 0 5px;
+    background-color: $C3;
+    width: 48%;
+    span {
+        color: $C1;
+        font-family: 'Oswald', sans-serif;
+        border-bottom: $C1 dotted 2px;
+        font-size: 2.1vw;
+        text-shadow: $C3 0 1px 1px;
+        background-color: $C2;
+        box-shadow: $C3 inset 0 0 10px;
+        width: 100%;
+        padding: 1%;
+    }
+    li {
+        margin-top: 2%;
+        margin-left: 0;
+        padding-left: 0;
+        border: $C1 0.1px solid;
+        color: $C1;
+        font-size: 1.8vw;
+        padding: 1%;
+        height: 14%;
+        width: 100%;
+        display: inline-block;
+        box-shadow: inset $C1 0 0 5px;
+        text-decoration: none;
+        background-color: $C3;
+        padding-left: 1%;
+        transition: padding-left 1s;
+        &:hover {
+            border: $C1 0.1px solid;
+            color: $C3;
+            font-size: 1.8vw;
+            padding: 1%;
+            padding-left: 10%;
+            height: 14%;
+            width: 100%;
+            display: inline-block;
+            box-shadow: inset $C3 0 0 5px;
+            text-decoration: none;
+            background-color: $C1;
+        }
+    }
+}
+
+.inline {
+    display: flex;
+    justify-content: center;
 }
