--- a/assets/css/cv.css
+++ b/assets/css/cv.css
@@ -6,11 +6,13 @@
 
 .menu:hover div { color: white; }
 
-header { background-color: #4c85bd; height: 200px; width: 98.92vw; margin-right: 0; margin-left: 0; max-width: none; -ms-grid-column: 3; grid-column: 3; }
+header { background-color: #4c85bd; height: 200px; width: 98.29vw; margin-right: 0; margin-left: 0; max-width: none; -ms-grid-column: 3; grid-column: 3; }
 
 header .profil { -webkit-box-shadow: 0px 0px 10px 0px white inset; box-shadow: 0px 0px 10px 0px white inset; z-index: 1; position: absolute; left: 0; height: 200px; -webkit-transition: all 0.5s; transition: all 0.5s; }
 
-header .civique { font-size: 2vw; height: 200px; width: 50%; text-align: right; color: white; position: absolute; right: 0; }
+header .civique { font-size: 2vw; height: 200px; width: 50%; text-align: right; color: white; position: absolute; right: 10px; text-shadow: #000000 1px 1px, #000000 -1px 1px, #000000 -1px -1px, #000000 1px -1px; }
+
+header .civique:after { content: "   "; }
 
 @media (min-width: 1121px) { body { margin: 0; padding: 0; width: 100%; text-shadow: #00000C 0.1px 0.1px white 0.1px 0.1px; }
   body h2 { font-size: 2.5vw; }
@@ -42,6 +44,7 @@ header .civique { font-size: 2vw; height: 200px; width: 50%; text-align: right; 
 
 /*desktops - higher resolution*/
 @media (min-width: 481px) and (max-width: 767px) { body { margin: 0; padding: 0; width: 100%; text-shadow: #00000C 0.1px 0.1px white 0.1px 0.1px; }
+  body .civique { width: 185px; }
   body h2 { font-size: 3.5vw; }
   body h3 { border-bottom: 3px solid #4c85bd; font-size: 3vw; }
   body #grid { display: -ms-grid; display: grid; -ms-grid-columns: 50% 50%; grid-template-columns: 50% 50%; }
@@ -58,6 +61,7 @@ header .civique { font-size: 2vw; height: 200px; width: 50%; text-align: right; 
 @media (max-width: 480px) { body { margin: 0; padding: 0; width: 100%; text-shadow: #00000C 0.1px 0.1px white 0.1px 0.1px; }
   body h2 { font-size: 3vw; }
   body h3 { border-bottom: 3px solid #4c85bd; color: #0a36c5; font-size: 1.5vw; }
+  body .civique { width: 75px; }
   body #grid { display: -ms-grid; display: grid; -ms-grid-columns: 50% 50%; grid-template-columns: 50% 50%; }
   body article { color: #4c85bd; font-size: 2vw; padding-left: 5%; width: 95%; }
   body ul { list-style: none; margin-left: 0; padding-left: 0; color: #00000C; }
