--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Oswald");
 body { background-color: #4c85bd; }
 
+html { scroll-behavior: smooth; }
+
 @media (min-width: 991px) { header { width: 100%; background-color: #00000C; }
   header img { left: 1%; width: 10%; padding: 0.5%; }
   header a { font-size: 1.5vw; color: white; }
@@ -15,7 +17,7 @@ body { background-color: #4c85bd; }
   header .dropdown-item { opacity: 0.5; }
   header .dropdown-item:hover { opacity: 0.9; }
   section { background-color: #4c85bd; width: 100%; color: white; }
-  section h1 { font-family: 'Oswald', sans-serif; text-align: center; font-size: 3vw; text-shadow: #00000C 0 1px 0; }
+  section h1, section h2 { font-family: 'Oswald', sans-serif; text-align: center; font-size: 3vw; text-shadow: #00000C 0 1px 0; }
   section .intro { font-size: 1.5vw; text-align: center; }
   section .description { text-align: center; border: 1.5px white dotted; -webkit-box-shadow: #00000C 0 1px 5px; box-shadow: #00000C 0 1px 5px; font-size: 1.5vw; }
   section .card { height: 350px; width: 200px; display: inline-block; margin: 10px; -webkit-box-shadow: 0px 2px 0px #00000C; box-shadow: 0px 2px 0px #00000C; -webkit-transition: 0.4s; transition: 0.4s; background-color: white; }
@@ -40,7 +42,7 @@ body { background-color: #4c85bd; }
   header .dropdown-item { opacity: 0.5; }
   header .dropdown-item:hover { opacity: 0.9; }
   section { background-color: #4c85bd; width: 100%; color: white; position: absolute; top: 7.5%; }
-  section h1 { font-family: 'Oswald', sans-serif; text-align: center; font-size: 5vw; text-shadow: #00000C 0 1px 0; padding-top: 5%; }
+  section h1, section h2 { font-family: 'Oswald', sans-serif; text-align: center; font-size: 5vw; text-shadow: #00000C 0 1px 0; padding-top: 5%; }
   section .intro { font-size: 2vw; text-align: center; }
   section .description { text-align: center; border: 1.5px white dotted; -webkit-box-shadow: #00000C 0 1px 5px; box-shadow: #00000C 0 1px 5px; font-size: 3vw; }
   section .card { margin-top: 1%; margin-bottom: 1%; height: 100%; margin-left: auto; margin-right: auto; width: 80%; display: block; padding: 1px; -webkit-box-shadow: 0px 2px 0px #00000C; box-shadow: 0px 2px 0px #00000C; -webkit-transition: 0.2s; transition: 0.2s; background-color: white; }
@@ -49,11 +51,22 @@ body { background-color: #4c85bd; }
   section .card .card-text { color: #4c85bd; height: 25%; font-size: 2.5vw; -webkit-transition: 0.2s; transition: 0.2s; }
   section .card .card-text::first-letter { border-left: dotted 2px #4c85bd; font-size: 2vw; border-radius: 15px; background-image: -webkit-gradient(linear, left top, right top, from(#00000C), color-stop(55%, white)); background-image: linear-gradient(90deg, #00000C 0%, white 55%); }
   section .card:hover { background-color: white; -webkit-transform: scale(0.95); transform: scale(0.95); -webkit-box-shadow: 0px 0px 5px #00000C; box-shadow: 0px 0px 5px #00000C; }
-  section .card:hover .card-title { text-align: center; font-size: 4vw; font-weight: bold; color: #4c85bd; text-shadow: 0px -1px 0px #00000C; } }
+  section .card:hover .card-title { text-align: center; font-size: 4vw; font-weight: bold; color: #4c85bd; text-shadow: 0px -1px 0px #00000C; }
+  .apps { background-color: #4c85bd; width: 100%; color: white; position: absolute; top: 50vh; }
+  .apps h1, .apps h2 { font-family: 'Oswald', sans-serif; text-align: center; font-size: 5vw; text-shadow: #00000C 0 1px 0; padding-top: 5%; }
+  .apps .intro { font-size: 2vw; text-align: center; }
+  .apps .description { text-align: center; border: 1.5px white dotted; -webkit-box-shadow: #00000C 0 1px 5px; box-shadow: #00000C 0 1px 5px; font-size: 3vw; }
+  .apps .card { margin-top: 1%; margin-bottom: 1%; height: 100%; margin-left: auto; margin-right: auto; width: 100%; display: block; padding: 1px; -webkit-box-shadow: 0px 2px 0px #00000C; box-shadow: 0px 2px 0px #00000C; -webkit-transition: 0.2s; transition: 0.2s; background-color: white; }
+  .apps .card .card-title { text-align: center; font-size: 5vw; font-weight: bold; color: #4c85bd; text-shadow: 0px 1px 0px #00000C, 0px -1px 0px white; -webkit-transition: 0.2s; transition: 0.2s; }
+  .apps .card .badge { width: 100%; }
+  .apps .card .card-text { color: #4c85bd; height: 25%; font-size: 2.5vw; -webkit-transition: 0.2s; transition: 0.2s; }
+  .apps .card .card-text::first-letter { border-left: dotted 2px #4c85bd; font-size: 2vw; border-radius: 15px; background-image: -webkit-gradient(linear, left top, right top, from(#00000C), color-stop(55%, white)); background-image: linear-gradient(90deg, #00000C 0%, white 55%); }
+  .apps .card:hover { background-color: white; -webkit-transform: scale(0.95); transform: scale(0.95); -webkit-box-shadow: 0px 0px 5px #00000C; box-shadow: 0px 0px 5px #00000C; }
+  .apps .card:hover .card-title { text-align: center; font-size: 4vw; font-weight: bold; color: #4c85bd; text-shadow: 0px -1px 0px #00000C; } }
 
 .logiciels { text-align: center; border: white 1px solid; list-style: none; padding: 1%; -webkit-box-shadow: inset white 0 0 5px; box-shadow: inset white 0 0 5px; background-color: #00000C; width: 48%; }
 
-.logiciels span { color: white; font-family: 'Oswald', sans-serif; border-bottom: white dotted 2px; font-size: 2.1vw; text-shadow: #00000C 0 1px 1px; background-color: #4c85bd; -webkit-box-shadow: #00000C inset 0 0 10px; box-shadow: #00000C inset 0 0 10px; width: 100%; padding: 1%; }
+.logiciels span { color: white; font-family: 'Oswald', sans-serif; border-bottom: white dotted 2px; font-size: 1.9vw; text-shadow: #00000C 0 1px 1px; background-color: #4c85bd; -webkit-box-shadow: #00000C inset 0 0 10px; box-shadow: #00000C inset 0 0 10px; width: 100%; padding: 1%; }
 
 .logiciels li { margin-top: 2%; margin-left: 0; padding-left: 0; }
 
