--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -6,6 +6,10 @@ body {
     background-color: $C2;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 @media (min-width: 991px) {
     header {
         width: 100%;
@@ -70,7 +74,8 @@ body {
         background-color: $C2;
         width: 100%;
         color: $C1;
-        h1 {
+        h1,
+        h2 {
             font-family: 'Oswald', sans-serif;
             text-align: center;
             font-size: 3vw;
@@ -204,7 +209,8 @@ body {
         color: $C1;
         position: absolute;
         top: 7.5%;
-        h1 {
+        h1,
+        h2 {
             font-family: 'Oswald', sans-serif;
             text-align: center;
             font-size: 5vw;
@@ -270,6 +276,79 @@ body {
             }
         }
     }
+    .apps {
+        background-color: $C2;
+        width: 100%;
+        color: $C1;
+        position: absolute;
+        top: 50vh;
+        h1,
+        h2 {
+            font-family: 'Oswald', sans-serif;
+            text-align: center;
+            font-size: 5vw;
+            text-shadow: $C3 0 1px 0;
+            padding-top: 5%;
+        }
+        .intro {
+            font-size: 2vw;
+            text-align: center;
+        }
+        .description {
+            text-align: center;
+            border: 1.5px $C1 dotted;
+            box-shadow: $C3 0 1px 5px;
+            font-size: 3vw;
+        }
+        .card {
+            margin-top: 1%;
+            margin-bottom: 1%;
+            height: 100%;
+            margin-left: auto;
+            margin-right: auto;
+            width: 100%;
+            display: block;
+            padding: 1px;
+            box-shadow: 0px 2px 0px $C3;
+            transition: 0.2s;
+            background-color: $C1;
+            .card-title {
+                text-align: center;
+                font-size: 5vw;
+                font-weight: bold;
+                color: $C2;
+                text-shadow: 0px 1px 0px $C3, 0px -1px 0px $C1;
+                transition: 0.2s;
+            }
+            .badge {
+                width: 100%;
+            }
+            .card-text {
+                color: $C2;
+                height: 25%;
+                font-size: 2.5vw;
+                transition: 0.2s;
+                &::first-letter {
+                    border-left: dotted 2px $C2;
+                    font-size: 2vw;
+                    border-radius: 15px;
+                    background-image: linear-gradient(90deg, $C3 0%, $C1 55%)
+                }
+            }
+            &:hover {
+                background-color: $C1;
+                transform: scale(0.95);
+                box-shadow: 0px 0px 5px $C3;
+                .card-title {
+                    text-align: center;
+                    font-size: 4vw;
+                    font-weight: bold;
+                    color: $C2;
+                    text-shadow: 0px -1px 0px $C3;
+                }
+            }
+        }
+    }
 }
 
 .logiciels {
@@ -284,7 +363,7 @@ body {
         color: $C1;
         font-family: 'Oswald', sans-serif;
         border-bottom: $C1 dotted 2px;
-        font-size: 2.1vw;
+        font-size: 1.9vw;
         text-shadow: $C3 0 1px 1px;
         background-color: $C2;
         box-shadow: $C3 inset 0 0 10px;
